@@ -130,7 +130,7 @@
     </table><br />
 
     <tal:comment replace="nothing">Budget-related information</tal:comment>
-    <fieldset>
+    <fieldset tal:condition="python: 'budgetRelated' in usedAttrs">
       <legend i18n:translate="">Budget</legend>
         <metal:field use-macro="python:here.widget('budgetRelated', mode='edit')"/>
         <div id="hideBudgetInfosIfNotBudgetRelated">
